// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Task /> should render properly for Assets 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-6 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-6"
    >
      Task Details
    </h2>
  </div>,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/tasks/0571517b-5f31-11ea-bb46-6a6895b1a9f6/assets"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Assets
        </a>
      </li>
    </ul>
  </nav>,
  "Assets",
]
`;

exports[`<Task /> should render properly for Details 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-6 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-6"
    >
      Task Details
    </h2>
  </div>,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/tasks/0571517b-5f31-11ea-bb46-6a6895b1a9f6/assets"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Assets
        </a>
      </li>
    </ul>
  </nav>,
  "Details",
]
`;

exports[`<Task /> should render properly for Errors 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-6 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-6"
    >
      Task Details
    </h2>
  </div>,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/tasks/0571517b-5f31-11ea-bb46-6a6895b1a9f6/assets"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Assets
        </a>
      </li>
    </ul>
  </nav>,
  "Errors",
]
`;

exports[`<Task /> should render properly for Log 1`] = `
Array [
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-1 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  padding-right: 4px;
  color: #808080;
}

.emotion-6 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<div
    className="emotion-2"
  >
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Queue
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <a
        className="emotion-0"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Job Details
      </a>
      <span
        className="emotion-1"
      >
        /
      </span>
    </div>
    <h2
      className="emotion-6"
    >
      Task Details
    </h2>
  </div>,
  .emotion-3 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

<nav
    className="emotion-3"
  >
    <ul
      className="emotion-2"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/tasks/0571517b-5f31-11ea-bb46-6a6895b1a9f6/assets"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Assets
        </a>
      </li>
    </ul>
  </nav>,
  "Log",
]
`;
